<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="com.example.onlineshopping.Forget">

    <EditText
        android:id="@+id/email_txt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="285dp"
        android:layout_height="57dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />


    <EditText
        android:id="@+id/ans_seq"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="297dp"
        android:layout_height="56dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/enter_sequrity_answer"
        android:inputType="textPersonName"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_txt"
        app:layout_constraintVertical_bias="0.098"
        android:autofillHints="" />

    <Button
        android:id="@+id/button5"
        android:layout_width="185dp"
        android:layout_height="54dp"
        android:background="@drawable/redius"
        android:text="@string/reset"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="46dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ans_seq"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373"
        app:srcCompat="@drawable/pass"
      />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="204dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toTopOf="@+id/email_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        app:srcCompat="@drawable/logo"
        />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="407dp"
        android:layout_height="54dp"
        android:background="@color/viewfinder_laser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="71dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/email_txt"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73"
        app:srcCompat="@drawable/accountperson"
 />

</androidx.constraintlayout.widget.ConstraintLayout>