<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/detailsElementBackground"
    tools:context="com.example.onlineshopping.ConfirmBuying">

    <ListView
        android:id="@+id/list3"
        android:layout_width="343dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="356dp"
        app:fontFamily="@font/bilbo_swash_caps"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/button10"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:background="@drawable/redius"
        android:text="@string/checkout"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/list3"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:text="@string/total"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="59dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.347"
        app:srcCompat="@drawable/proceed"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="145dp"
        android:layout_height="32dp"
        android:text="@string/my_cart"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="26sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="54dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toTopOf="@+id/list3"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845"
        app:srcCompat="@drawable/shoppingcart"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="28sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="407dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="208dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>